# VendiBot

./: Cargo.toml  LICENSE.md
data/: drinks.json
src/: drink_option.rs  main.rs  selection.rs
src/artifactory/: enclave.rs  keys.rs  mod.rs
src/io/: mod.rs  timer.rs  weigand.rs
src/io/backend/: mock.rs  mod.rs  pi_io.rs
src/vending/: controller.rs  drink_option.rs  mod.rs  selection.rs
