[package]
name = "VendiBot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version ="0.7", features=["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter"] }
bit_field = "0.10"
bitvec = "1"
serde_with = "2.0.1"
byteorder = "1.4.3"

[target.armv7-unknown-linux-gnueabihf.dependencies]
rppal = "0.13"
